--- a/Proyecto.ipynb
+++ b/Proyecto.ipynb
@@ -2749,20 +2749,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d72347f",
+   "cell_type": "markdown",
+   "id": "4d29b729",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "--------------"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f1ea5f2",
+   "cell_type": "markdown",
+   "id": "f110ddb3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### chi cuadrada"
+   ]
   },
   {
    "cell_type": "code",
