--- a/GuiaProyecto.ipynb
+++ b/GuiaProyecto.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "![image.png](attachment:image.png)\n",
     "\n",
-    "Con este dataset buscamos analizar el comportamiento de la tasa de desempleo, el PIB, el salario minimo, poblacion e inflació en Estados Unidos a lo largo del tiempo para realizar una proyección de la poblacion desempleada en los siguientes años. \n",
+    "Con este proyecto buscamos analizar el comportamiento de la tasa de desempleo, el PIB, el salario minimo, poblacion e inflación en Estados Unidos a lo largo del tiempo para realizar una proyección de la poblacion desempleada en los siguientes años. \n",
     "\n",
     "### 1.2 Objetivos.\n",
     "\n",
