--- a/Proyecto.ipynb
+++ b/Proyecto.ipynb
@@ -1652,31 +1652,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2011</th>\n",
-       "      <td>1.554258e+13</td>\n",
-       "      <td>0.036721</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2012</th>\n",
-       "      <td>1.619701e+13</td>\n",
-       "      <td>0.042105</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2013</th>\n",
-       "      <td>1.678485e+13</td>\n",
-       "      <td>0.036293</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2014</th>\n",
-       "      <td>1.752716e+13</td>\n",
-       "      <td>0.044225</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2015</th>\n",
-       "      <td>1.823830e+13</td>\n",
-       "      <td>0.040573</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>2016</th>\n",
        "      <td>1.874508e+13</td>\n",
        "      <td>0.027786</td>\n",
@@ -1707,11 +1682,6 @@
       ],
       "text/plain": [
        "               251  Rendimiento\n",
-       "2011  1.554258e+13     0.036721\n",
-       "2012  1.619701e+13     0.042105\n",
-       "2013  1.678485e+13     0.036293\n",
-       "2014  1.752716e+13     0.044225\n",
-       "2015  1.823830e+13     0.040573\n",
        "2016  1.874508e+13     0.027786\n",
        "2017  1.954298e+13     0.042566\n",
        "2018  2.061186e+13     0.054694\n",
@@ -1726,7 +1696,7 @@
    ],
    "source": [
     "gdp['Rendimiento'] = gdp[251].pct_change()\n",
-    "gdp.tail(10)"
+    "gdp.tail()"
    ]
   },
   {
@@ -1963,7 +1933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "c2260ac7",
    "metadata": {},
    "outputs": [
@@ -2169,7 +2139,7 @@
        "[5 rows x 66 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
