--- a/Proyecto.ipynb
+++ b/Proyecto.ipynb
@@ -2727,14 +2727,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f110ddb3",
-   "metadata": {},
-   "source": [
-    "### chi cuadrada"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "cf770da3",
@@ -2748,7 +2740,11 @@
    "id": "f0f88d44",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "wage_mean = wage[\"State.Minimum.Wage.2020.Dollars\"].mean()\n",
+    "wage_sd = wage[\"State.Minimum.Wage.2020.Dollars\"].std()\n",
+    "wage_sim = np.random.normal(loc=wage_mean,scale=wage_sd,size=2500)"
+   ]
   },
   {
    "cell_type": "code",
@@ -2756,7 +2752,11 @@
    "id": "6595a737",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "wage = pd.read_csv(\"Minimum Wage Data.csv\",encoding='cp1252')\n",
+    "wage = wage.drop(wage[wage[\"State.Minimum.Wage.2020.Dollars\"] == 0].index)\n",
+    "sns.histplot(wage[\"State.Minimum.Wage.2020.Dollars\"], kde=True);"
+   ]
   },
   {
    "cell_type": "code",
